--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/axios": "^0.14.0",
+    "@willsoto/nestjs-prometheus": "^5.1.0",
     "axios": "^1.2.2",
     "mysql2": "^2.3.3",
+    "prom-client": "^14.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
